# ASCIIgL

./: .gitignore  ASCIIgL.cpp  ASCIIgL.sln  ASCIIgL.vcxproj  ASCIIgL.vcxproj.filters  README.md  READMEPLEASE.txt  build commands.txt  build_commands.txt  main.cpp
ASCIIgL/: CMakeLists.txt
ASCIIgL/include/ASCIIgL/engine/: Camera2D.hpp  Camera3D.hpp  Logger.hpp  Mesh.hpp  Model.hpp  Texture.hpp
ASCIIgL/include/ASCIIgL/renderer/: Renderer.hpp  Screen.hpp  Vertex.hpp  VertexShader.hpp
ASCIIgL/include/ASCIIgL/util/: Collision.hpp  MathUtil.hpp
ASCIIgL/src/engine/: Camera2D.cpp  Camera3D.cpp  GameObj.cpp  Logger.cpp  Model.cpp  Texture.cpp
ASCIIgL/src/renderer/: Renderer.cpp  Screen.cpp  Vertex.cpp
ASCIIgL/src/util/: Collision.cpp  MathUtil.cpp
ASCIIgLEngine/: ASCIIgLEngine.hpp  CMakeLists.txt  README.txt
ASCIIgLEngine/src/engine/: Camera3D.cpp  Camera3D.hpp  CollisionUtil.cpp  CollisionUtil.hpp  GameObj.hpp  Logger.cpp  Logger.hpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.hpp  Texture.cpp  Texture.hpp
ASCIIgLEngine/src/renderer/: ASCIIgLEngine.cpp  RenderEnums.hpp  Renderer.cpp  Renderer.hpp  Screen.cpp  Screen.hpp  Texture.cpp  Texture.hpp  Vertex.cpp  Vertex.hpp  VertexShader.hpp
ASCIIgLEngine/src/util/: MathUtil.cpp  MathUtil.hpp
I_Dont_Wanna_Run_For_Christmas/: CMakeLists.txt
I_Dont_Wanna_Run_For_Christmas/res/models/backpack/: backpack.mtl
I_Dont_Wanna_Run_For_Christmas/res/models/level/: MazeTest.mtl
I_Dont_Wanna_Run_For_Christmas/res/models/level2/: MazeTest.mtl
I_Dont_Wanna_Run_For_Christmas/src/: Enemies.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Present.hpp  main.cpp
res/models/Mariah/: mariah.mtl
res/models/Mariah2/: mariah.mtl
res/models/Present/: present.mtl
res/models/level2/: MazeTest.mtl
res/models/test/: Test.mtl
res/models/wall/: wall.mtl
src/: Camera2D.cpp  Camera2D.hpp  Camera3D.cpp  Camera3D.hpp  Screen.cpp  Screen.hpp  Vertex.hpp  main.cpp
src/gameCode/: Camera3D.hpp  Enemies.hpp  Game.cpp  Game.hpp  GameObj.cpp  GameObj.hpp  Model.hpp  Player.cpp  Player.hpp  Present.hpp  Renderer.hpp  main.cpp
src/gameEngineCode/: Camera2D.hpp  Camera3D.cpp  Camera3D.hpp  Mesh.cpp  Mesh.hpp  Renderer.hpp
src/projectCode/: ASCII_Math.cpp  ASCII_Math.hpp  ASCIIgLEngine.cpp  ASCIIgLEngine.h  ASCIIgLEngine.hpp  Camera2D.cpp  Camera2D.hpp  Camera3D.cpp  Camera3D.hpp  Colour.hpp  LineAlgo.cpp  LineAlgo.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Screen.cpp  Screen.hpp  Texture.cpp  Texture.hpp  Vertex.hpp  VertexShader.hpp
src/renderingEngineCode/: ASCIIgLEngine.cpp  ASCIIgLEngine.hpp  Screen.cpp  Screen.hpp  Texture.cpp  Texture.hpp  Vertex.hpp  VertexShader.hpp
src/userCode/: Vertex.hpp  main.cpp
